--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -51,10 +51,10 @@ libs/JSystem/JKernel/JKRArchivePub.cpp:
     .text: [0x8000db44, 0x8000e554]
     .data: [0x80347bd8, 0x80347c28]
 
-#libs/JSystem/JKernel/JKRDecomp.cpp:
-    #.text: [0x8000f2ec, 0x8000fa00]
-    #.data: [0x80347c78, 0x80347cc8]
-    #.sbss: [0x803d49f0, 0x803d49f8]
+libs/JSystem/JKernel/JKRDecomp.cpp:
+    .text: [0x8000f2ec, 0x8000fa00]
+    .data: [0x80347c78, 0x80347cc8]
+    .sbss: [0x803d49f0, 0x803d49f8]
 
 libs/JSystem/JKernel/JKRDisposer.cpp:
     .text: [0x8000fa00, 0x8000faec]
