use other progress script for release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,7 +69,7 @@ jobs:
       
       - name: Print progress(Release)
         run: |
-          python calcprogress.py -f
+          .\tools\ProgressCalculator.exe
 
       - name: Clean
         run: |          
