--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -252,6 +252,9 @@ libs/dolphin/os/__ppc_eabi_init.cpp:
     .init: [0x80003400, 0x80003458]
     .text: [0x800f31b8, 0x800f324c]
 
+libs/PowerPC_EABI_Support/src/Runtime/__mem.c:
+    .init: [0x80003458, 0x80003590]
+
 #libs/PowerPC_EABI_Support/src/MSL_C/PPC_EABI/abort_exit.c:
     #.text: [0x8010679c, 0x801068f4]
     #.bss: [0x803c61b8, 0x803c62b8]
@@ -282,6 +285,9 @@ libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/bsearch.c:
 
 libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/buffer_io.c:
     .text: [0x80108cdc, 0x80108de0]
+
+libs/PowerPC_EABI_Support/src/MSL_C/PPC_EABI/critical_regions.gamecube.c:
+    .text: [0x80108de0, 0x80108dec]
 
 libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/ctype.c:
     .text: [0x80108dec, 0x80108ef0]
@@ -316,12 +322,12 @@ libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/mem_funcs.c:
 libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/misc_io.c:
     .text: [0x8010a1fc, 0x8010a20c]
 
-#libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/printf.c:
-    #.text: [0x8010a20c, 0x8010c3f0]
-    #.rodata: [0x8036b240, 0x8036b268]
-    #.data: [0x80393298, 0x803934c8]
-    #.sdata: [0x80414560, 0x80414568]
-    #.sdata2: [0x80418498, 0x804184a0]
+libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/printf.c:
+    .text: [0x8010a20c, 0x8010c3f0]
+    .rodata: [0x8036b240, 0x8036b268]
+    .data: [0x80393298, 0x803934c8]
+    .sdata: [0x80414560, 0x80414568]
+    .sdata2: [0x80418498, 0x804184a0]
 
 libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/scanf.c:
     .text: [0x8010c3f0, 0x8010d4f4]
@@ -332,17 +338,17 @@ libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/signal.c:
     .text: [0x8010d4f4, 0x8010d5dc]
     .bss: [0x803c65f0, 0x803c6608]
 
-#libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/string.c:
-    #.text: [0x8010d5dc, 0x8010da90]
+libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/string.c:
+    .text: [0x8010d5dc, 0x8010da90]
 
 libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/strtold.c:
     .text: [0x8010da90, 0x8010f09c]
     .rodata: [0x8036b290, 0x8036b2e8]
     .sdata2: [0x804184a0, 0x804184b8]
 
-#libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/strtoul.c:
-    #.text: [0x8010f09c, 0x8010f9e4]
-    #.data: [0x80393598, 0x80393620]
+libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/strtoul.c:
+    .text: [0x8010f09c, 0x8010f9e4]
+    .data: [0x80393598, 0x80393620]
 
 libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/float.c:
     .sdata: [0x80414568, 0x80414598]
@@ -350,9 +356,13 @@ libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/float.c:
 libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common/wchar_io.c:
     .text: [0x8010f9e4, 0x8010fa94]
 
+libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common_Embedded/uart_console_io_gcn.c:
+    .text: [0x8010fa94, 0x8010fb88]
+    .sbss: [0x804161b8, 0x804161c0]
 
-libs/PowerPC_EABI_Support/src/Runtime/__mem.c:
-    .init: [0x80003458, 0x80003590]
+libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common_Embedded/Math/Double_precision/e_asin.c:
+    .text: [0x8010fb88, 0x8010fdc0]
+    .sdata2: [0x804184b8, 0x80418540]
 
 src/Bando/EngineSound.cpp:
     .text: [0x80118cac, 0x80118d1c]
