--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -255,6 +255,20 @@ libs/dolphin/os/__ppc_eabi_init.cpp:
 libs/PowerPC_EABI_Support/src/Runtime/__mem.c:
     .init: [0x80003458, 0x80003590]
 
+libs/PowerPC_EABI_Support/src/Runtime/__va_arg.c:
+    .text: [0x801059a0, 0x80105a68]
+
+libs/PowerPC_EABI_Support/src/Runtime/CPlusLibPPC.cp:
+    .text: [0x80105ac8, 0x80105af8]
+
+libs/PowerPC_EABI_Support/src/Runtime/ptmf.c:
+    .text: [0x80105ea4, 0x80105f24]
+    .rodata: [0x8036b0a0, 0x8036b0b0]
+
+libs/PowerPC_EABI_Support/src/Runtime/runtime.c:
+    .text: [0x80105f24, 0x80106600]
+    .rodata: [0x8036b0b0, 0x8036b0c8]
+
 #libs/PowerPC_EABI_Support/src/MSL_C/PPC_EABI/abort_exit.c:
     #.text: [0x8010679c, 0x801068f4]
     #.bss: [0x803c61b8, 0x803c62b8]
@@ -431,10 +445,6 @@ libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common_Embedded/Math/Double_precision/s_
 
 libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common_Embedded/Math/Double_precision/s_modf.c:
     .text: [0x80112830, 0x8011292c]
-
-libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common_Embedded/Math/Double_precision/s_sin.c:
-    .text: [0x8011292c, 0x80112a04]
-    .sdata2: [0x804188f0, 0x804188f8]
 
 libs/PowerPC_EABI_Support/src/MSL_C/MSL_Common_Embedded/Math/Double_precision/s_sin.c:
     .text: [0x8011292c, 0x80112a04]
